# SCORE

./: .gitignore  LICENSE  README.md  README.md~  info.txt
src/: coordinator.cpp
src/description/: CMakeLists.txt  package.xml
src/description/config/: joint_names_scara.yaml
src/description/launch/: display.launch  gazebo.launch  urdf.rviz
src/description/meshes/: Link_1.STL  Link_2.STL  Link_4.STL  base_link.STL
src/description/urdf/: scara.urdf
src/ethercat_manager/: CHANGELOG.rst  CMakeLists.txt  ethercat_manager.h  package.xml
src/ethercat_manager/src/: ethercat_manager.cpp
src/interface_Wang/: ethercat_interface.cpp
src/ipendant/: CMakeLists.txt  README.md  package.xml
src/ipendant/launch/: ipendant.launch
src/ipendant/saves/: 222.txt  22222.txt  qwrf.txt
src/ipendant/src/interface/: commandHandler.cpp  commandHandler.h  commandProcessor.cpp  commandProcessor.h  images.qrc  indicatorlamp.cpp  insertprogdialog.cpp  insertprogdialog.h  insertprogdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newfiledialog.cpp  newfiledialog.h  newfiledialog.ui  notificationdialog.cpp  notificationdialog.h  notificationdialog.ui  playback.cpp  playback.h  project.cpp  project.h  projectHandler.cpp  projectHandler.h  reconstruct.cpp  reconstruct.h  res.h  virtualkeyboard.cpp  virtualkeyboard.h  virtualkeyboard.ui  working_thread.cpp  working_thread.h
src/ipendant/src/startup/: dialog.cpp  dialog.h  dialog.ui  startup.cpp
src/minas_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/minas_control/debian/: postinst
src/minas_control/doc/: conf.py  index.rst
src/minas_control/include/minas_control/: minas_client.h
src/minas_control/launch/: minas_control.launch
src/minas_control/src/: minas_client.cpp  reset.cpp  simple_test.cpp
src/minas_interface/: CMakeLists.txt  ethercat_interface.h  package.xml
src/rt_core/: CMakeLists.txt  package.xml
src/scara_description/: CMakeLists.txt  package.xml  urdf.rviz
src/scara_description/config/: joint_names_mxx_scara.yaml
src/scara_description/launch/: display.launch  gazebo.launch
src/scara_description/meshes/: base_link.STL  fake_link.STL  link1.STL  link2.STL  link3.STL
src/scara_description/robots/: mxx_scara.gv  mxx_scara.urdf
src/scara_gui/: CMakeLists.txt  README.md  myviz.cpp  package.xml  plugin.xml  setup.py
src/scara_gui/include/: mypluginwidget.h
src/scara_gui/include/rqt_scara_gui/: indicatorlamp.h  my_plugin.h
src/scara_gui/src/: main.cpp  mypluginwidget.cpp  test_node_pub.cpp  test_node_sub.cpp
src/scara_gui/src/rqt_scara_gui/: SCARA.perspective  indicatorlamp.cpp  my_plugin.cpp  my_plugin.ui
src/scara_interface/: CMakeLists.txt  package.xml
src/scara_interface/config/: extended_params.yaml
src/scara_interface/include/minas_control/: minas_client.h  minas_hardware_interface.h
src/scara_interface/launch/: x50_interface.launch  x50_planner.launch
src/scara_interface/old/: _pipline.cpp  _scene_monitor.cpp  _scene_operator.cpp
src/scara_interface/src/: a.out  calibration.cpp  constants.h  controller.cpp  controller.h  coordinator.cpp  coordinator_bak.cpp  coordinator_dialog.cpp  coordinator_dialog.h  coordinator_dialog.ui  coordinator_gui.cpp  coordinator_lmy_sim.cpp  driver.cpp  ethercat_interface.cpp  ethercat_interface.h  ethercat_interface_one.cpp  ethercat_interface_para.h  ethercat_interface_sim.cpp  ethercat_interface_test.cpp  interface.cpp  interface_dialog.cpp  interface_dialog.h  interface_dialog.ui  interface_gui.cpp  main.cpp  minas_client.cpp  minas_hardware_interface.cpp  mxx_interface.cpp  planner.cpp  recorder.cpp  scaraSysPara.h  simple_test.cpp  simulator.cpp  slaveinfo.cpp  spline.cpp  spline.h  spline_old.cpp  test.cpp  test2.cpp  test2.h
src/scara_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/scara_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  mxx_scara.srdf  ompl_planning.yaml  scara.srdf
src/scara_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  rs_scara.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  x50.rviz  x50_rviz.launch
src/traj_planner/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  coordinator.cpp  package.xml
src/traj_planner/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/traj_planner/catkin_generated/installspace/: traj_planner.pc  traj_plannerConfig.cmake
src/traj_planner/catkin_generated/stamps/traj_planner/: _setup_util.py.stamp
src/traj_planner/gtest/: CTestTestfile.cmake  Makefile
src/traj_planner/launch/: scara_planner.launch
src/traj_planner/src/: constants.h  coordinator.cpp
src/u_devices/: CMakeLists.txt  package.xml
src/u_devices/include/: gpio.c  gpio_lib.c  gpio_lib.h  marsboard.h  spi.c  spi_lib.c  spi_lib.h
src/u_devices/src/: devices.h  joystick.cpp  keypad.cpp  keypad_old.cpp  test.c
src/x50_description/: CMakeLists.txt  package.xml
src/x50_description/launch/: x50.launch  x50.rviz
src/x50_description/meshes/: PRLinkB1.SLDPRT  PRLinkB2.SLDPRT  RBase.SLDASM  RBase.stl  RLink1.SLDASM  RLink1.stl  RLink2.SLDASM  RLink2.stl  RLink3.SLDASM  RLink3.stl  RLink4.SLDASM  RLink4.stl  RLink5.SLDASM  RLink5.stl  RLinkB1.SLDASM  RLinkB1.stl  RLinkB2.SLDASM  RLinkB2.stl  RPBase.sldprt  RPLink1.sldprt  RPLink2.SLDASM  RPLink3.SLDASM  RPLink4.SLDASM  RPLink5.SLDASM  mass.txt
src/x50_description/urdf/: x50_full.urdf  x50_moveit.urdf
