<?xml version="1.0"?>
<package>
  <name>minas_control</name>
  <version>1.0.8</version>
  <description>This package contains ros_control based robot controller for PANASONIC MINAS EtherCAT Motor Driver Control System</description>

  <author email="534o@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Developer 534</author>
  <maintainer email="dev@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Kyokai (TORK) Developer Team</maintainer>

  <license>GPLv2</license>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/minas_control</url>
  <url type="repository">https://github.com/tork-a/minas</url>
  <url type="bugtracker">https://github.com/tork-a/minas/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>ethercat_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>soem</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>tinyxml</build_depend>
  <build_depend>ethercat_manager</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>ethercat_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>tinyxml</run_depend>
  <run_depend>ethercat_manager</run_depend>


  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
